# DraconicEngine

./: .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: linux_build.yml
Docs/: Benchmarking.md  Shell.md  allocators.md
Engine/cpp/: CMakeLists.txt
Engine/cpp/Runtime/: CMakeLists.txt  Draconic.cppm
Engine/cpp/Runtime/Core/: CMakeLists.txt
Engine/cpp/Runtime/Core/Containers/: Containers.cppm  String.cpp  String.cppm
Engine/cpp/Runtime/Core/Definitions/: Definitions.cppm  StdTypes.cppm
Engine/cpp/Runtime/Core/Math/: Functions.cppm  Vector4.bench.cpp  Vector4.cppm
Engine/cpp/Runtime/Platform/: intrinsics.h
Engine/cpp/Runtime/Rendering/: CMakeLists.txt
Engine/cpp/Runtime/Rendering/RHI/: Core.cpp  RHI.cppm
Engine/cpp/Runtime/Scene/: CMakeLists.txt
Engine/cpp/Runtime/Scene/Camera/: CameraController.cpp  CameraController.cppm
Engine/cpp/Runtime/Shell/: Input.cppm  Shell.cpp  Shell.cppm  Window.cppm
Engine/cpp/Runtime/Shell/Desktop/: SDL3Input.cpp  SDL3Input.cppm  SDL3Shell.cpp  SDL3Shell.cppm  SDL3Shell.test.cpp  SDL3Window.cpp  SDL3Window.cppm
Engine/cpp/Runtime/Shell/Null/: NullInput.cpp  NullInput.cppm  NullShell.cpp  NullShell.cppm  NullShell.test.cpp  NullWindow.cpp  NullWindow.cppm
Engine/cpp/runtime/: CMakeLists.txt
Engine/cpp/runtime/Input/: Input.cpp  Input.cppm
Engine/cpp/runtime/Scene/: Scene.cppm
Engine/cpp/runtime/core/: CMakeLists.txt  Version.cppm  core.cppm
Engine/cpp/runtime/core/Definitions/: Definitions.cppm
Samples/cpp/: CMakeLists.txt  rendering.cpp
Samples/cpp/Render/: CMakeLists.txt  RenderSample.cpp
cmake/: Compiler.cmake  Modules.cmake  Shaders.cmake
engine/native/: CMakeLists.txt
engine/native/core/: CMakeLists.txt  core.cppm
engine/native/core/definitions/: definitions.cppm  version.cppm
engine/native/core/filesystem/: filesystem.cpp  filesystem.cppm
engine/native/core/io/: io.cppm
engine/native/core/math/: constants.cppm  math.cppm  math.test.cpp  vector4.cppm
engine/native/core/memory/: bumpAllocator.cppm  bumpAllocator.test.cpp  handle.cppm  handle_registry.cppm  memory.cppm  slot_array.cppm  trackingAllocator.test.cpp
engine/native/main/: main.cpp
engine/native/platform/: CMakeLists.txt  platform.cppm  simd.h
engine/native/platform/cpu/: cpu_info.h  cpu_info_neon.cpp  cpu_info_x64.cpp
engine/native/platform/linux/: linux.cpp
engine/native/platform/mac/: mac.mm
engine/native/platform/win32/: win32.cpp
engine/native/rendering/: CMakeLists.txt
engine/native/rendering/material/: material.cppm
engine/native/rendering/quad_renderer/: quad_renderer.cpp  quad_renderer.cppm
engine/native/rendering/renderer/: renderer.cpp  renderer.cppm
engine/native/rendering/rendergraph/: rendergraph.cpp  rendergraph.cppm
engine/native/rendering/rhi/: buffers.cpp  commands.cpp  core.cpp  macros.h  pipelines.cpp  rhi.cppm  rhi_bgfx.cpp  texture.cpp  vertex.cppm
engine/native/rendering/shaders/: fs.sc  fs_quad.sc  varying.def.sc  varying_quad.def.sc  vs.sc  vs_quad.sc
