add_modules_library(Definitions)
add_modules_library(Math)
add_modules_library(IO)
add_modules_library(Memory)
add_modules_library(Logging)
add_modules_library(Containers)

target_link_libraries(Math PUBLIC Definitions bx)
target_link_libraries(IO PUBLIC Definitions stb_image)
target_link_libraries(Memory PUBLIC Definitions Math)
target_link_libraries(Logging PUBLIC Definitions)
target_link_libraries(Containers PUBLIC Definitions Memory Math)
